--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,8 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "hono": "^4.7.2"
   },
   "devDependencies": {
